[gd_scene load_steps=7 format=2]

[ext_resource path="res://towers/sprites/crescenttower.png" type="Texture" id=1]
[ext_resource path="res://towers/sprites/crosstower.png" type="Texture" id=2]
[ext_resource path="res://towers/sprites/diamondtower.png" type="Texture" id=3]
[ext_resource path="res://ui/Styles.tres" type="Theme" id=4]
[ext_resource path="res://ui/ReShapeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/ReshapeUpgradeSelector.gd" type="Script" id=6]

[node name="ReshapeUpgradeSelector" type="Node2D"]
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
margin_right = 128.0
margin_bottom = 208.0
theme = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
margin_left = -16.0
margin_right = 144.0
margin_bottom = 224.0
color = Color( 0.368627, 0.545098, 0.607843, 0.513726 )

[node name="CrescentButton" type="TextureButton" parent="Control"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )

[node name="CrossButton" type="TextureButton" parent="Control"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )

[node name="DiamondButton" type="TextureButton" parent="Control"]
margin_left = 96.0
margin_top = 1.0
margin_right = 128.0
margin_bottom = 33.0
texture_normal = ExtResource( 3 )

[node name="ReShapeButton" parent="Control" instance=ExtResource( 5 )]
margin_top = 190.0
margin_right = 128.0
margin_bottom = 208.0

[node name="Labels" type="VBoxContainer" parent="Control"]
margin_top = 36.0
margin_right = 107.0
margin_bottom = 188.0

[node name="CrossTower" type="Label" parent="Control/Labels"]
margin_right = 107.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.847059, 0.705882, 0.478431, 1 )
text = "Cross Tower"

[node name="CrescentTower" type="Label" parent="Control/Labels"]
margin_top = 18.0
margin_right = 107.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.247059, 0.376471, 0.313726, 1 )
text = "Crescent Tower"

[node name="DiamondTower" type="Label" parent="Control/Labels"]
visible = false
margin_top = 18.0
margin_right = 107.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.368627, 0.545098, 0.607843, 1 )
text = "Diamond Tower"

[node name="CostLabel" type="Label" parent="Control/Labels"]
margin_top = 36.0
margin_right = 107.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.556863, 0.227451, 0.278431, 1 )
text = "Build Cost: 120 Gold"

[node name="UpgradesLabel" type="Label" parent="Control/Labels"]
margin_top = 54.0
margin_right = 107.0
margin_bottom = 85.0
text = "Upgrades: 
None yet!"
autowrap = true

[node name="CostTween" type="Tween" parent="."]
